--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,7 @@
 version=5.1.21.BUILD-SNAPSHOT
+systemProp.http.proxyHost=localhost
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=localhost
+systemProp.https.proxyPort=7890
+systemProp.socks.proxyHost=localhost
+systemProp.socks.proxyPort=7890
